--- a/index.html
+++ b/index.html
@@ -18,22 +18,43 @@
         </div>
       </div>
 
-      <div class="actions">
-        <button id="reloadBtn" class="btn btn-ghost">重新載入今日</button>
-      </div>
+      <nav class="tabs" aria-label="Navigation">
+        <button class="tab is-active" data-tab="study">Study</button>
+        <button class="tab" data-tab="add">Add</button>
+        <button class="tab" data-tab="library">Library</button>
+        <button class="tab" data-tab="backup">Backup</button>
+      </nav>
     </div>
   </header>
 
   <main class="container">
-    <section class="study">
-      <div class="section-head">
-        <h2>今日複習</h2>
-        <div class="hint">點卡片翻面｜空白鍵翻面｜1 還不熟｜2 我會了</div>
+
+    <!-- Study -->
+    <section id="tab-study" class="panel">
+      <div class="row between">
+        <h2>Study</h2>
+        <button id="reloadBtn" class="btn btn-ghost" type="button">重新載入</button>
       </div>
 
-      <div id="empty" class="empty">
-        今天沒有到期單字 🎉
+      <div class="row wrap gap">
+        <div class="field">
+          <label>Set</label>
+          <select id="studySetSelect"></select>
+        </div>
+
+        <div class="field">
+          <label>模式</label>
+          <select id="modeSelect">
+            <option value="en2zh">英 → 中</option>
+            <option value="zh2en">中 → 英</option>
+            <option value="cloze">例句挖空</option>
+          </select>
+        </div>
+
+        <div class="hint">快捷鍵：空白翻面｜1 不熟｜2 普通｜3 熟</div>
       </div>
+
+      <div id="empty" class="empty">今天沒有到期單字 🎉</div>
 
       <div id="reviewBox" class="review hidden">
         <div class="progress">
@@ -41,61 +62,16 @@
           <span class="pill" id="duePill">Due</span>
         </div>
 
-        <button id="cardBtn" class="flashcard" type="button" aria-label="Flashcard">
+        <button id="cardBtn" class="flashcard" type="button">
           <div class="front">
-            <div class="term" id="front">term</div>
-            <div class="muted" id="sub"></div>
+            <div class="big" id="front">term</div>
+            <div class="muted" id="frontSub"></div>
             <div class="tap">點一下顯示答案</div>
           </div>
-
           <div class="back">
-            <div class="def" id="back"></div>
+            <div class="big2" id="back"></div>
             <div class="meta" id="exampleOut"></div>
             <div class="meta" id="tagsOut"></div>
             <div class="tap">點一下回到題目</div>
           </div>
-        </button>
-
-        <div class="rateRow">
-          <button class="btn btn-soft rate" data-score="1" type="button">還不熟</button>
-          <button class="btn btn-primary rate" data-score="3" type="button">我會了</button>
-        </div>
-
-        <details class="more">
-          <summary>更多評分選項（0~3）</summary>
-          <div class="rateRow">
-            <button class="btn btn-ghost rate" data-score="0" type="button">0 忘了</button>
-            <button class="btn btn-ghost rate" data-score="1" type="button">1 很不熟</button>
-            <button class="btn btn-ghost rate" data-score="2" type="button">2 還行</button>
-            <button class="btn btn-ghost rate" data-score="3" type="button">3 很熟</button>
-          </div>
-        </details>
-      </div>
-    </section>
-
-    <section class="add">
-      <div class="section-head">
-        <h2>新增單字</h2>
-        <div class="hint">建議：term + 中文 + 例句（可空）</div>
-      </div>
-
-      <div class="panel">
-        <div class="grid">
-          <input id="term" placeholder="term (e.g., catabolism)" />
-          <input id="pos" placeholder="pos (e.g., n.)" />
-          <input id="definition" placeholder="中文意思" />
-          <input id="example" placeholder="例句（可空）" />
-          <input id="tags" class="span2" placeholder="tags（用逗號分隔，可空）" />
-        </div>
-
-        <div class="row">
-          <button id="addBtn" class="btn btn-primary" type="button">加入</button>
-          <div class="msg" id="addMsg"></div>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <script type="module" src="./app.js"></script>
-</body>
-</html>
+        </
