--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
       </div>
 
-      <nav class="tabs" aria-label="Navigation">
+      <nav class="tabs">
         <button class="tab is-active" data-tab="study">Study</button>
         <button class="tab" data-tab="add">Add</button>
         <button class="tab" data-tab="library">Library</button>
@@ -38,6 +38,11 @@
 
       <div class="row wrap gap">
         <div class="field">
+          <label>Folder</label>
+          <select id="studyFolderSelect"></select>
+        </div>
+
+        <div class="field">
           <label>Set</label>
           <select id="studySetSelect"></select>
         </div>
@@ -51,7 +56,15 @@
           </select>
         </div>
 
-        <div class="hint">快捷鍵：空白翻面｜1 不熟｜2 普通｜3 熟</div>
+        <div class="hint">手機左右滑：←不熟｜→熟｜空白翻面｜1/2/3評分</div>
+      </div>
+
+      <div class="todayBox">
+        <div class="row between">
+          <div class="todayText" id="todayText">今日進度：0 / 0</div>
+          <div class="todayText muted" id="todayDoneText">今日完成：0</div>
+        </div>
+        <div class="bar"><div id="todayBar" class="barFill" style="width:0%"></div></div>
       </div>
 
       <div id="empty" class="empty">今天沒有到期單字 🎉</div>
@@ -59,7 +72,7 @@
       <div id="reviewBox" class="review hidden">
         <div class="progress">
           <span id="progressText">1 / 1</span>
-          <span class="pill" id="duePill">Due</span>
+          <span class="pill">Due</span>
         </div>
 
         <button id="cardBtn" class="flashcard" type="button">
@@ -88,50 +101,83 @@
     <section id="tab-add" class="panel hidden">
       <div class="row between">
         <h2>Add</h2>
-        <div class="hint">建議：term + 中文 + 例句（可空）</div>
+        <div class="hint">先建 Folder → 再建 Set（可填考試）→ 再加單字</div>
       </div>
 
-      <div class="row wrap gap">
-        <div class="field grow">
-          <label>Set</label>
-          <select id="addSetSelect"></select>
-        </div>
-
-        <div class="field grow">
-          <label>新增 Set</label>
-          <div class="row gap">
-            <input id="newSetName" placeholder="例如 TOEIC / 生物 / 新聞" />
-            <button id="createSetBtn" class="btn btn-ghost" type="button">建立</button>
+      <div class="panelInner">
+        <div class="row wrap gap">
+          <div class="field grow">
+            <label>Folder</label>
+            <select id="addFolderSelect"></select>
+          </div>
+          <div class="field grow">
+            <label>新增 Folder</label>
+            <div class="row gap">
+              <input id="newFolderName" placeholder="例如：生物 / TOEIC / 新聞" />
+              <button id="createFolderBtn" class="btn btn-ghost" type="button">建立</button>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="grid">
-        <div class="field">
-          <label>term</label>
-          <input id="term" placeholder="catabolism" />
-        </div>
-        <div class="field">
-          <label>詞性</label>
-          <input id="pos" placeholder="n." />
-        </div>
-        <div class="field">
-          <label>中文</label>
-          <input id="definition" placeholder="分解代謝" />
-        </div>
-        <div class="field">
-          <label>例句（可空）</label>
-          <input id="example" placeholder="During fasting, catabolism increases." />
-        </div>
-        <div class="field span2">
-          <label>tags（逗號分隔）</label>
-          <input id="tags" placeholder="bio, exam" />
-        </div>
-      </div>
+        <div class="row wrap gap">
+          <div class="field grow">
+            <label>Set（單元）</label>
+            <select id="addSetSelect"></select>
+          </div>
 
-      <div class="row gap">
-        <button id="addBtn" class="btn btn-primary" type="button">加入</button>
-        <div class="msg" id="addMsg"></div>
+          <div class="field grow">
+            <label>新增 Set（單元）</label>
+            <div class="row gap">
+              <input id="newSetName" placeholder="例如：Ch.3 Cell / Unit 5" />
+              <button id="createSetBtn" class="btn btn-ghost" type="button">建立</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="grid">
+          <div class="field">
+            <label>本單元考試名稱（可空）</label>
+            <input id="examTitle" placeholder="例如：生物小考 3" />
+          </div>
+          <div class="field">
+            <label>考試日期（可空）</label>
+            <input id="examDate" type="date" />
+          </div>
+        </div>
+        <div class="row gap">
+          <button id="saveExamBtn" class="btn btn-soft" type="button">儲存本單元考試資訊</button>
+          <div class="msg" id="examMsg"></div>
+        </div>
+
+        <hr class="hr" />
+
+        <div class="grid">
+          <div class="field">
+            <label>英文</label>
+            <input id="term" placeholder="catabolism" />
+          </div>
+          <div class="field">
+            <label>詞性</label>
+            <input id="pos" placeholder="n." />
+          </div>
+          <div class="field">
+            <label>中文</label>
+            <input id="definition" placeholder="分解代謝" />
+          </div>
+          <div class="field">
+            <label>例句（可空）</label>
+            <input id="example" placeholder="During fasting, catabolism increases." />
+          </div>
+          <div class="field span2">
+            <label>tags（逗號分隔）</label>
+            <input id="tags" placeholder="bio, exam" />
+          </div>
+        </div>
+
+        <div class="row gap">
+          <button id="addBtn" class="btn btn-primary" type="button">加入</button>
+          <div class="msg" id="addMsg"></div>
+        </div>
       </div>
     </section>
 
@@ -139,17 +185,25 @@
     <section id="tab-library" class="panel hidden">
       <div class="row between">
         <h2>Library</h2>
-        <div class="hint">搜尋 / 編輯 / 刪除</div>
+        <div class="row gap">
+          <button id="viewTableBtn" class="btn btn-soft" type="button">表格</button>
+          <button id="viewNotebookBtn" class="btn btn-ghost" type="button">單字薄</button>
+          <button id="printNotebookBtn" class="btn btn-ghost" type="button">列印</button>
+        </div>
       </div>
 
       <div class="row wrap gap">
+        <div class="field">
+          <label>Folder</label>
+          <select id="libFolderSelect"></select>
+        </div>
         <div class="field">
           <label>Set</label>
           <select id="libSetSelect"></select>
         </div>
         <div class="field grow">
           <label>搜尋</label>
-          <input id="libSearch" placeholder="輸入 term / 中文 / tag…" />
+          <input id="libSearch" placeholder="輸入 term / 中文 / pos / tag…" />
         </div>
         <div class="field">
           <label>&nbsp;</label>
@@ -157,13 +211,14 @@
         </div>
       </div>
 
-      <div class="tableWrap">
+      <!-- Table View -->
+      <div id="tableView" class="tableWrap">
         <table class="table">
           <thead>
             <tr>
               <th>term</th>
+              <th>pos</th>
               <th>中文</th>
-              <th>例句</th>
               <th>tags</th>
               <th>下次到期</th>
               <th>操作</th>
@@ -171,6 +226,11 @@
           </thead>
           <tbody id="libBody"></tbody>
         </table>
+      </div>
+
+      <!-- Notebook View -->
+      <div id="notebookView" class="notebook hidden">
+        <div id="notebookContent"></div>
       </div>
 
       <!-- Edit Modal -->
@@ -189,7 +249,7 @@
               <input id="editTerm" />
             </div>
             <div class="field">
-              <label>詞性</label>
+              <label>pos</label>
               <input id="editPos" />
             </div>
             <div class="field">
@@ -233,9 +293,7 @@
         <div class="msg" id="backupMsg"></div>
       </div>
 
-      <div class="empty">
-        建議：每週匯出一次 JSON 存到雲端硬碟。
-      </div>
+      <div class="empty">建議：每週匯出一次 JSON 存到雲端硬碟。</div>
     </section>
 
   </main>
