--- a/index.html
+++ b/index.html
@@ -31,25 +31,25 @@
   <main class="container">
 
     <!-- Home (Cards) -->
-<section id="tab-home" class="panel">
-  <div class="row between">
-    <h2>Home</h2>
-    <div class="hint">Folder → Set（點卡片直接開始複習 / 看單字薄）</div>
-  </div>
+    <section id="tab-home" class="panel">
+      <div class="row between">
+        <h2>Home</h2>
+        <div class="hint">Folder → Set（點卡片直接開始複習 / 看單字薄）</div>
+      </div>
 
-  <div class="row wrap gap" style="margin-top:10px;">
-    <div class="field">
-      <label>Folder</label>
-      <select id="homeFolderSelect"></select>
-    </div>
-    <div class="field grow">
-      <label>搜尋 Set</label>
-      <input id="homeSearch" placeholder="輸入單元名稱，例如 Unit 5 / Ch.3…" />
-    </div>
-  </div>
+      <div class="row wrap gap" style="margin-top:10px;">
+        <div class="field">
+          <label>Folder</label>
+          <select id="homeFolderSelect"></select>
+        </div>
+        <div class="field grow">
+          <label>搜尋 Set</label>
+          <input id="homeSearch" placeholder="輸入單元名稱，例如 Unit 5 / Article Words / Week 3…" />
+        </div>
+      </div>
 
-  <div id="cardsWrap" class="cardsWrap"></div>
-</section>
+      <div id="cardsWrap" class="cardsWrap"></div>
+    </section>
 
     <!-- Study -->
     <section id="tab-study" class="panel">
@@ -78,7 +78,7 @@
           </select>
         </div>
 
-        <div class="hint">手機左右滑：←不熟｜→熟｜空白翻面｜1/2/3評分</div>
+        <div class="hint">手機左右滑：←不熟｜→熟｜空白翻面｜1/2/3 評分</div>
       </div>
 
       <div class="todayBox">
@@ -123,7 +123,7 @@
     <section id="tab-add" class="panel hidden">
       <div class="row between">
         <h2>Add</h2>
-        <div class="hint">先建 Folder → 再建 Set（可填考試）→ 再加單字</div>
+        <div class="hint">先建 Folder → 再建 Set（可選：考試/截止日）→ 再加單字</div>
       </div>
 
       <div class="panelInner">
@@ -135,7 +135,7 @@
           <div class="field grow">
             <label>新增 Folder</label>
             <div class="row gap">
-              <input id="newFolderName" placeholder="例如：生物 / TOEIC / 新聞" />
+              <input id="newFolderName" placeholder="例如：Academic / Daily / TOEIC / Article Words" />
               <button id="createFolderBtn" class="btn btn-ghost" type="button">建立</button>
             </div>
           </div>
@@ -150,7 +150,7 @@
           <div class="field grow">
             <label>新增 Set（單元）</label>
             <div class="row gap">
-              <input id="newSetName" placeholder="例如：Ch.3 Cell / Unit 5" />
+              <input id="newSetName" placeholder="例如：Unit 5 / Week 3 / Article #12 / Lesson 4" />
               <button id="createSetBtn" class="btn btn-ghost" type="button">建立</button>
             </div>
           </div>
@@ -159,7 +159,7 @@
         <div class="grid">
           <div class="field">
             <label>本單元考試名稱（可空）</label>
-            <input id="examTitle" placeholder="例如：生物小考 3" />
+            <input id="examTitle" placeholder="例如：Unit 5 Quiz / Midterm Vocab" />
           </div>
           <div class="field">
             <label>考試日期（可空）</label>
@@ -192,7 +192,7 @@
           </div>
           <div class="field span2">
             <label>tags（逗號分隔）</label>
-            <input id="tags" placeholder="bio, exam" />
+            <input id="tags" placeholder="unit5, exam, reading" />
           </div>
         </div>
 
